# webdiff

./: .bowerrc  .gitignore  .travis.yml  CHANGELOG  Gruntfile.js  MANIFEST.in  README  README.md  TODO  app.py  app.spec  bower.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test-gitwebdiff.sh  test.sh  testing.cfg  webdiff-gpt2.py
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
scripts/: black.sh
static/css/: style.css
static/js/: file_diff.js
static/jsdifflib/: diffview.css  diffview.js
templates/: base.html  file_diff.html  heartbeat.html
testdata/algorithms/left/: GuiCommonElements.java  file1.java
testdata/algorithms/right/: GuiCommonElements.java  README.md  file1.java
testdata/chardiffs/: after  before
testdata/dygraphsjs/: lindex  wtindex
testdata/empty/left/: __init__.py
testdata/jsondiffs/left/: continents.geo.json  ospd5.summary.json  tsconfig.json
testdata/jsondiffs/right/: continents.geo.json  ospd5.summary.json  package.json  tsconfig.json
testdata/longline-nospace/left/: text.asciidoc
testdata/longline-nospace/right/: text.asciidoc
testdata/manyfiles/left/: drop.txt
testdata/manyfiles/right/: add.txt  c.txt  f.txt  g.txt  i.txt
testdata/messyadd/: lindex  wtindex
testdata/no-trailing-newline/left/: file.txt
testdata/no-trailing-newline/right/: add.txt  file.txt
testdata/rename+change/left/: huckfinn.txt
testdata/rename+change/right/: huckfinn.md
testdata/renamedfile/right/: renamed.json
testdata/shebang/: left  right
testdata/shuffle-add/left/: words.txt
testdata/shuffle-add/right/: words.txt
testdata/tiny-nested/: lindex  rindex
testdata/tiny-nested/left/: file
testdata/tiny-nested/right/: file
testdata/unified/: dygraphs-patch-u5.txt  dygraphs-patch.txt  manyfiles.txt  rename+change.txt
testdata/webdiffdiff/: lindex  wtindex
testdata/webdiffdiff/left/: TODO  app.py
testdata/webdiffdiff/right/: TODO  app.py
tests/: argparser_test.py  pair_test.py  runner.html  test.py  travis-setup.sh  travis-test.sh  unified_diff_test.py  util_test.js  util_test.py  version_test.py
ts/: .prettierrc  AnnotatedImage.tsx  CodeDiff.tsx  CodeDiffContainer.tsx  DiffOptions.tsx  DiffView.tsx  FileDropdown.tsx  FileList.tsx  FileModeSelector.tsx  FileSelector.tsx  ImageBlinker.tsx  ImageDiff.tsx  ImageDiffModeSelector.tsx  ImageMetadata.tsx  ImageSideBySide.tsx  ImageSwipe.tsx  NoPixelsChanged.tsx  Root.tsx  SingleImage.tsx  diff-options.ts  eslint.config.mjs  file_diff.ts  image_utils.tsx  index.tsx  knip.json  knip.jsonc  options.ts  package.json  tsconfig.json  utils.ts  webpack.config.js
ts/__tests__/: diff-options.test.ts  util.test.ts
ts/codediff/: DiffRow.tsx  KeyboardShortcuts.tsx  NormalizeJSONOption.tsx  PageCover.tsx  SkipRow.tsx  char-diffs.ts  codediff.ts  codediff.tsx  codes.ts  difflib.ts  dom-utils.ts  globals.d.ts  html-text-mapper.ts  language.ts  string-utils.ts  table-utils.ts
ts/codediff/__tests__/: addcharacterdiffs_test.js  addcharacterdiffs_test.ts  diffranges_test.js  diffranges_test.ts  guesslanguage_test.js  guesslanguage_test.ts  htmlsubstr_test.js  htmlsubstr_test.ts  index.html  spanspreader_test.js  spanspreader_test.ts
ts/declarations/: codediff.d.ts
webdiff/: app.py  argparser.py  diff.py  dirdiff.py  folderify.py  git.py  github_fetcher.py  githubdiff.py  gitwebdiff.py  gitwebshow.py  localfilediff.py  options.py  toy.py  unified_diff.py  util.py
webdiff/static/codediff.js/: codediff.css  codediff.js
webdiff/static/css/: commits.less  inconsolata.css  style.css
webdiff/static/js/: commits.jsx  components.js  components.jsx  file_diff.js  image.jsx  (+2 more)
webdiff/templates/: base.html  commits.html  file_diff.html  heartbeat.html
(+8 files in other folders)
