[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "webdiff"
version = "1.1.0"
description = "Two-column web-based git difftool"
license = "Apache-2.0"
readme = "README.md"
authors = [ "Dan Vanderkam <danvdk@gmail.com>" ]
homepage = "https://github.com/danvk/webdiff/"
repository = "https://github.com/danvk/webdiff/"
keywords = [ "git", "difftool", "web" ]
exclude = ["tests*"]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Version Control"
]
# This is generated, so it's in .gitignore. But we need to package it.
include = ["webdiff/static/js/file_diff.js"]

[tool.poetry.dependencies]
python = "^3.10"
binaryornot = "*"
pillow = "*"
PyGithub = "2.3.0"
unidiff = "==0.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ruff = "^0.4.6"

[tool.poetry.scripts]
webdiff = "webdiff.app:run"
git-webdiff = "webdiff.gitwebdiff:run"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
